--- a/front/index.html
+++ b/front/index.html
@@ -38,8 +38,8 @@
 
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
-	          <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
-	          <li class="nav-item active"><a href="shop.html" class="nav-link">Shop</a></li>
+	          <li class="nav-item active"><a href="index.html" class="nav-link">Inicio</a></li>
+	          <li class="nav-item active"><a href="shop.html" class="nav-link">Loja</a></li>
 	          <li class="nav-item cta cta-colored"><a href="cart.html" class="nav-link"><span class="icon-shopping_cart"></span>[0]</a></li>
 	        </ul>
 	      </div>
@@ -57,27 +57,14 @@
 	            <div class="col-md-12 ftco-animate text-center">
 	              <h1 class="mb-2">XAUIDUAIDOAUIOPDOAS</h1>
 	              <h2 class="subheading mb-4">DLASÇJDKLÇQWOPÇDJLÇAWDLÇS</h2>
-	              <p><a href="#" class="btn btn-primary">Produtos</a></p>
+	              <p><a href="shop.html" class="btn btn-primary">Produtos</a></p>
 	            </div>
 
 	          </div>
 	        </div>
 	      </div>
 
-	      <div class="slider-item" style="background-image: url(images/bg_2.jpg);">
-	      	<div class="overlay"></div>
-	        <div class="container">
-	          <div class="row slider-text justify-content-center align-items-center" data-scrollax-parent="true">
-
-	            <div class="col-sm-12 ftco-animate text-center">
-	              <h1 class="mb-2">100% Fresh &amp; Organic Foods</h1>
-	              <h2 class="subheading mb-4">We deliver organic vegetables &amp; fruits</h2>
-	              <p><a href="#" class="btn btn-primary">View Details</a></p>
-	            </div>
-
-	          </div>
-	        </div>
-	      </div>
+	      
 	    </div>
     </section>
 
@@ -362,7 +349,7 @@
             <div class="ftco-footer-widget mb-4 ml-md-5">
               <h2 class="ftco-heading-2">Menu</h2>
               <ul class="list-unstyled">
-                <li><a href="#" class="py-2 d-block">Shop</a></li>
+                <li><a href="shop.html" class="py-2 d-block">Loja</a></li>
               </ul>
             </div>
           </div>
@@ -402,4 +389,4 @@
   <script src="js/main.js"></script>
     
   </body>
-</html>
+    </html>
