--- a/front/index.html
+++ b/front/index.html
@@ -40,6 +40,8 @@
 	        <ul class="navbar-nav ml-auto">
 	          <li class="nav-item active"><a href="index.html" class="nav-link">Inicio</a></li>
 	          <li class="nav-item active"><a href="shop.html" class="nav-link">Loja</a></li>
+
+			  <!-- Verificar se o doido ta logado -->
 	          <li class="nav-item cta cta-colored"><a href="cart.html" class="nav-link"><span class="icon-shopping_cart"></span>[0]</a></li>
 	        </ul>
 	      </div>
