--- a/front/shop.html
+++ b/front/shop.html
@@ -51,8 +51,8 @@
       <div class="container">
         <div class="row no-gutters slider-text align-items-center justify-content-center">
           <div class="col-md-9 ftco-animate text-center">
-          	<p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home</a></span> <span>Products</span></p>
-            <h1 class="mb-0 bread">Products</h1>
+          	<p class="breadcrumbs"><span class="mr-2"><a href="index.html">Início</a></span> <span>Loja</span></p>
+            <h1 class="mb-0 bread">Produtos</h1>
           </div>
         </div>
       </div>
@@ -63,7 +63,7 @@
     		<div class="row justify-content-center">
     			<div class="col-md-10 mb-5 text-center">
     				<ul class="product-category">
-    					<li><a href="#" class="active">All</a></li>
+    					<li><a href="#" class="active">Todos</a></li>
     				</ul>
     			</div>
     		</div>
