--- a/front/index.html
+++ b/front/index.html
@@ -57,16 +57,13 @@
 	          <div class="row slider-text justify-content-center align-items-center" data-scrollax-parent="true">
 
 	            <div class="col-md-12 ftco-animate text-center">
-	              <h1 class="mb-2">XAUIDUAIDOAUIOPDOAS</h1>
-	              <h2 class="subheading mb-4">DLASÇJDKLÇQWOPÇDJLÇAWDLÇS</h2>
-	              <p><a href="shop.html" class="btn btn-primary">Produtos</a></p>
+	              <h1 class="mb-2">GETWEARABLE</h1>
+	              <h2 class="subheading mb-4">Se vista com o que há de mais recente no mercado tech</h2>
+	              <p><a href="./shop.html" class="btn btn-primary">Produtos</a></p>
 	            </div>
-
 	          </div>
 	        </div>
 	      </div>
-
-	      
 	    </div>
     </section>
 
@@ -74,8 +71,8 @@
     	<div class="container">
 				<div class="row justify-content-center mb-3 pb-3">
           <div class="col-md-12 heading-section text-center ftco-animate">
-            <h2 class="mb-4">Últimos lançamentos</h2>
-            <p>ASJAFKLSJFKLAJKLFJJFAOPOPFASOP</p>
+            <h2 class="mb-4">Produtos</h2>
+            <p>Lançamentos recentes</p>
           </div>
         </div>   		
     	</div>
@@ -330,7 +327,7 @@
           </div>
         </div>
       </div>
-    </section>
+  </section>
     <footer class="ftco-footer ftco-section">
       <div class="container">
       	<div class="row">
