--- a/front/index.html
+++ b/front/index.html
@@ -314,14 +314,14 @@
       <div class="container py-4">
         <div class="row d-flex justify-content-center py-5">
           <div class="col-md-6">
-          	<h2 style="font-size: 22px;" class="mb-0">Subcribe to our Newsletter</h2>
-          	<span>Get e-mail updates about our latest shops and special offers</span>
+          	<h2 style="font-size: 22px;" class="mb-0">Assine a nossa Newsletter</h2>
+          	<span>Insira seu email para ficar por dentro das ofertas</span>
           </div>
           <div class="col-md-6 d-flex align-items-center">
             <form action="#" class="subscribe-form">
               <div class="form-group d-flex">
-                <input type="text" class="form-control" placeholder="Enter email address">
-                <input type="submit" value="Subscribe" class="submit px-3">
+                <input type="text" class="form-control" placeholder="Insira seu email">
+                <input type="submit" value="Inscreva-se" class="submit px-3">
               </div>
             </form>
           </div>
