--- a/front/cadastro.html
+++ b/front/cadastro.html
@@ -59,9 +59,9 @@
       <div class="row no-gutters slider-text align-items-center justify-content-center">
         <div class="col-md-9 ftco-animate text-center">
           <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Faça</a></span> <span>Seu</span>
-            <span>Login</span>
+            <span>Cadastro</span>
           </p>
-          <h1 class="mb-0 bread">Login</h1>
+          <h1 class="mb-0 bread">Cadastro</h1>
         </div>
       </div>
     </div>
@@ -72,8 +72,14 @@
       <div class="row justify-content-center">
         <div class="col-xl-7 ftco-animate">
           <form action="#" class="billing-form">
-            <h3 class="mb-4 billing-heading">Faça Seu Login!</h3>
+            <h3 class="mb-4 billing-heading">Faça o cadastro!</h3>
             <div class="row align-items-end">
+              <div class="col-md-6">
+                <div class="form-group">
+                  <label for="firstname">Name</label>
+                  <input type="text" class="form-control" placeholder="Insira um nome">
+                </div>
+              </div>
               <div class="col-md-6">
                 <div class="form-group">
                   <label for="lastname">Email</label>
@@ -86,10 +92,10 @@
                   <input type="text" class="form-control" placeholder="Insira sua senha">
                 </div>
               </div>
-              <div class="col-md-12">
+              <div class="col-md-8">
                 <div class="form-group">
-                  <button type="submit" style="border-radius: 8px;" class="btn btn-primary col-md-8 d-flex justify-content-center">
-                    <p style="display: contents;">login</p>
+                  <button type="submit" style="border-radius: 8px;" class="btn btn-primary col-md-6">
+                    <p style="display: contents;">Enviar</p>
                   </button>
                 </div>
               </div>
