changing the signup and signin file names

--- a/front/signin.html
+++ b/front/signin.html
@@ -88,8 +88,8 @@
               </div>
               <div class="col-md-12">
                 <div class="form-group">
-                  <button type="submit" style="border-radius: 8px;" class="btn btn-primary col-md-8 d-flex justify-content-center">
-                    <p style="display: contents;">login</p>
+                  <button type="submit" class="btn btn-primary col-md-12 d-flex justify-content-center">
+                    <p style="display: contents;">Acessar</p>
                   </button>
                 </div>
               </div>
