--- a/front/index.html
+++ b/front/index.html
@@ -40,7 +40,13 @@
 	        <ul class="navbar-nav ml-auto">
 	          <li class="nav-item active"><a href="./index.html" class="nav-link">Inicio</a></li>
 	          <li class="nav-item active"><a href="./shop.html" class="nav-link">Loja</a></li>
-						<li class="nav-item active"><a href="./login.html" class="nav-link">Login</a></li>					
+			  <li class="nav-item dropdown">
+				<a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Acessar</a>
+				<div class="dropdown-menu" aria-labelledby="dropdown04">
+				  <a class="dropdown-item" href="signin.html">Login</a>
+				  <a class="dropdown-item" href="signin.html">Cadastro</a>
+				</div>
+			  </li>					
 
 			  <!-- Verificar se o doido ta logado -->
 	          <li class="nav-item cta cta-colored"><a href="cart.html" class="nav-link"><span class="icon-shopping_cart"></span>[0]</a></li>
