--- a/front/signin.html
+++ b/front/signin.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Vegefoods - Free Bootstrap 4 Template by Colorlib</title>
+  <title>getWearable</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -54,7 +54,7 @@
     </div>
   </nav>
 
-  <div class="hero-wrap hero-bread" style="background-image: url('images/bg_1.jpg');">
+  <div class="hero-wrap hero-bread" style="background-image: url('https://atriumhealth.org/dailydose/-/media/daily-dose-blog/featured-images/hw-fitness-tracker_featured.jpg?h=1080&la=en&w=1920&hash=054879BF8652A5A951D02ABC5BAF92B2C84AA142');">
     <div class="container">
       <div class="row no-gutters slider-text align-items-center justify-content-center">
         <div class="col-md-9 ftco-animate text-center">
@@ -72,18 +72,17 @@
       <div class="row justify-content-center">
         <div class="col-xl-7 ftco-animate">
           <form action="#" class="billing-form">
-            <h3 class="mb-4 billing-heading">Faça Seu Login!</h3>
             <div class="row align-items-end">
               <div class="col-md-6">
                 <div class="form-group">
-                  <label for="lastname">Email</label>
-                  <input type="text" class="form-control" placeholder="Insira seu email">
+                  <label for="email">Email</label>
+                  <input type="email" class="form-control" placeholder="Insira seu email">
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="form-group">
-                  <label for="streetaddress">Password</label>
-                  <input type="text" class="form-control" placeholder="Insira sua senha">
+                  <label for="password">Senha</label>
+                  <input type="password" class="form-control" placeholder="Insira sua senha">
                 </div>
               </div>
               <div class="col-md-12">
