--- a/front/signup.html
+++ b/front/signup.html
@@ -54,12 +54,11 @@
     </div>
   </nav>
 
-  <div class="hero-wrap hero-bread" style="background-image: url('images/bg_1.jpg');">
+  <div class="hero-wrap hero-bread" style="background-image: url('https://atriumhealth.org/dailydose/-/media/daily-dose-blog/featured-images/hw-fitness-tracker_featured.jpg?h=1080&la=en&w=1920&hash=054879BF8652A5A951D02ABC5BAF92B2C84AA142');">
     <div class="container">
       <div class="row no-gutters slider-text align-items-center justify-content-center">
         <div class="col-md-9 ftco-animate text-center">
           <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Faça</a></span> <span>Seu</span>
-            <span>Cadastro</span>
           </p>
           <h1 class="mb-0 bread">Cadastro</h1>
         </div>
@@ -74,28 +73,28 @@
           <form action="#" class="billing-form">
             <h3 class="mb-4 billing-heading">Faça o cadastro!</h3>
             <div class="row align-items-end">
-              <div class="col-md-6">
+              <div class="col-md-12">
                 <div class="form-group">
-                  <label for="firstname">Name</label>
+                  <label for="name">Nome</label>
                   <input type="text" class="form-control" placeholder="Insira um nome">
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="form-group">
-                  <label for="lastname">Email</label>
-                  <input type="text" class="form-control" placeholder="Insira seu email">
+                  <label for="email">Email</label>
+                  <input type="email" class="form-control" placeholder="Insira seu email">
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="form-group">
-                  <label for="streetaddress">Password</label>
-                  <input type="text" class="form-control" placeholder="Insira sua senha">
+                  <label for="password">Senha</label>
+                  <input type="password" class="form-control" placeholder="Insira sua senha">
                 </div>
               </div>
-              <div class="col-md-8">
+              <div class="col-md-12">
                 <div class="form-group">
-                  <button type="submit" style="border-radius: 8px;" class="btn btn-primary col-md-6">
-                    <p style="display: contents;">Enviar</p>
+                  <button type="submit" class="btn btn-primary col-md-12">
+                    <p style="display: contents;">Cadastrar-se</p>
                   </button>
                 </div>
               </div>
